@@ -9,10 +9,16 @@ class Window(object):
     @staticmethod
     def create(view_ids, model, res_id=False, domain=None,
             view_type='form', window=None, context=None, mode=None, name=False,
-            limit=None, auto_refresh=False, search_value=None):
+            limit=None, auto_refresh=False, search_value=None, icon=None):
         from tryton.gui import Main
         if context is None:
             context = {}
+        if view_type not in ('form', 'tree', 'board'):
+            import logging
+            log = logging.getLogger('view')
+            log.error('unknown view type: '+view_type)
+            del log
+            return
 
         if view_type == 'form':
             from form import Form
@@ -20,7 +26,6 @@ class Window(object):
                     view_ids = (view_ids or []), context=context, name=name,
                     limit=limit, auto_refresh=auto_refresh,
                     search_value=search_value)
-            Main.get_main().win_add(win)
         elif view_type == 'tree':
             if model == 'ir.ui.menu':
                 if Main.get_main().sig_reload_menu():
@@ -28,17 +33,12 @@ class Window(object):
             from tree import Tree
             win = Tree(model, window, res_id, view_ids and view_ids[0] or None,
                     domain, context, name=name)
-            Main.get_main().win_add(win)
         elif view_type == 'board':
             from board import Board
             win = Board(window, view_ids and view_ids[0] or None,
                     context=context, name=name, auto_refresh=auto_refresh)
-            Main.get_main().win_add(win)
-        else:
-            import logging
-            log = logging.getLogger('view')
-            log.error('unknown view type: '+view_type)
-            del log
+        win.icon = icon
+        Main.get_main().win_add(win)
 
     @staticmethod
     def create_wizard(action, datas, parent, state='init', direct_print=False,
